<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/launchFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.launch.LaunchFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="318dp"
        android:layout_height="382dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/onboarding_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/onboarding_title"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/onboarding_message"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/registerBtn"
        style="@style/PrimaryButton"
        android:layout_marginTop="24dp"
        android:text="@string/onboarding_button_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginBottom="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:text="@string/onboarding_already_account"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_display_bold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/purple"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>