<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.register.RegisterFragment">

    <include
        android:id="@+id/registerNavbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/registerScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/registerNavbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/register_title"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/registerMessage"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/register_message"
                android:textAlignment="center"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="66dp"
                android:layout_marginRight="32dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/usernameField"
                        style="@style/CommonField"
                        android:hint="@string/username_hint"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/usernameWarning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_pro_display_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/emailField"
                        style="@style/CommonField"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:id="@+id/emailWarning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_pro_display_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/masterPasswordField"
                        style="@style/CommonField"
                        android:hint="@string/master_password_hint"
                        android:inputType="numberPassword" />

                    <TextView
                        android:id="@+id/masterPasswordWarning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_pro_display_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/remasterPasswordField"
                        style="@style/CommonField"
                        android:hint="@string/remaster_password_hint"
                        android:inputType="numberPassword" />

                    <TextView
                        android:id="@+id/reMasterPasswordWarning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_pro_display_medium" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/registerBtn"
        style="@style/PrimaryButton"
        android:layout_marginBottom="24dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>